--- a/src/app/modules/channels/v2/actions/wire.component.html
+++ b/src/app/modules/channels/v2/actions/wire.component.html
@@ -1,7 +1,3 @@
 <a class="m-button-v2 m-button-v2--iconOnly" (click)="wire()">
-  <m-icon
-    from="assets-file"
-    iconId="assets/icons/wire.svg"
-    [sizeFactor]="0"
-  ></m-icon>
+  <i class="material-icons">attach_money</i>
 </a>
