--- a/src/app/common/components/stackable-modal/stackable-modal.component.html
+++ b/src/app/common/components/stackable-modal/stackable-modal.component.html
@@ -1,3 +1,3 @@
-<div class="m-stackableModal" [hidden]="hidden">
+<div class="m-stackableModal" [hidden]="hidden" (click)="onClick($event)">
   <ng-template dynamic-host></ng-template>
 </div>
