--- a/src/app/modules/groups/card/card.html
+++ b/src/app/modules/groups/card/card.html
@@ -3,10 +3,7 @@
   [class.m-groupCard--hasUpdates]="hasMarker"
 >
   <div class="m-card--user--banner">
-    <div
-      class="m-card--user--banner--img"
-      [ngStyle]="{'background-image': 'url(' + cdnUrl + 'fs/v1/banners/' + group.guid + ')'}"
-    ></div>
+    <div class="m-card--user--banner--img"></div>
     <div class="minds-banner-overlay"></div>
   </div>
 
