--- a/src/app/modules/legacy/components/cards/object/album/album.html
+++ b/src/app/modules/legacy/components/cards/object/album/album.html
@@ -8,7 +8,7 @@
       *ngFor="let image of entity.images"
       [routerLink]="['/media', image]"
     >
-      <img src="fs/v1/thumbnail/{{image}}/medium" />
+      <!-- <img src="fs/v1/thumbnail/{{image}}/medium" /> -->
     </a>
   </div>
 </div>
