--- a/src/app/modules/groups/tile/tile.component.html
+++ b/src/app/modules/groups/tile/tile.component.html
@@ -3,19 +3,7 @@
   [class.m-groupTile--hasUpdates]="hasMarker"
 >
   <div class="m-groups--tile-banner">
-    <div
-      class="m-groups--tile-banner-img"
-      [ngStyle]="{
-        'background-image':
-          'url(' +
-          cdnUrl +
-          'fs/v1/banners/' +
-          entity.guid +
-          '/fat/' +
-          entity.icontime +
-          ')'
-      }"
-    ></div>
+    <div class="m-groups--tile-banner-img"></div>
     <div class="minds-banner-overlay"></div>
   </div>
 
