--- a/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
+++ b/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
@@ -1,8 +1,8 @@
-<div class="m-activityOwnerBlock__avatar" [hovercard]="owner">
+<!-- <div class="m-activityOwnerBlock__avatar" [hovercard]="owner">
   <a [routerLink]="['/', username]">
     <img [src]="avatarUrl" class="m-border" />
   </a>
-</div>
+</div> -->
 
 <div class="m-activityOwnerBlock__body">
   <a class="m-activityOwnerBlock__displayName" [routerLink]="['/', username]">
