--- a/src/app/modules/wallet/v2/tokens/settings/settings-tokens.component.html
+++ b/src/app/modules/wallet/v2/tokens/settings/settings-tokens.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!wallet" class="m-wallet__spinner m-wallet__spinner--tokenSettings">
   <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
 </div>
-<div class="m-walletSettings" *ngIf="wallet">
+<div class="m-walletSettings" *ngIf="wallet" scrollTarget>
   <!-- -------------------------------------------- -->
   <!--- ADDRESS - OPTIONS - -------------------------->
   <!-- -------------------------------------------- -->
