--- a/src/app/modules/wallet/v2/tokens/tokens.component.html
+++ b/src/app/modules/wallet/v2/tokens/tokens.component.html
@@ -3,6 +3,7 @@
     *ngIf="!tokenOnboardingComplete"
     [hasAddress]="hasOnchainAddress"
     [phoneVerified]="phoneVerified"
+    [dashboardView]="dashboardView"
     (onboardingComplete)="onTokenOnboardingCompleted()"
   ></m-walletTokenOnboarding>
 
