Tooltips consistent background colors

--- a/src/app/common/components/tooltip/tooltip.component.scss
+++ b/src/app/common/components/tooltip/tooltip.component.scss
@@ -26,8 +26,10 @@ m-tooltip {
   text-align: left;
   text-transform: none;
   @include m-theme() {
-    color: themed($m-white);
-    background-color: themed($m-grey-900);
+    color: themed($m-textColor--primary);
+    background-color: themed($m-bgColor--secondary);
+    border: 1px solid themed($m-borderColor--tertiary);
+    box-shadow: 0 2px 4px 0 rgba(themed($m-black), 0.2);
   }
 
   &.m-tooltip--bubble--anchor-bottom {
