--- a/src/app/modules/notifications/notifications.component.scss
+++ b/src/app/modules/notifications/notifications.component.scss
@@ -185,6 +185,12 @@ m-notifications--topbar-toggle {
     height: 100vh;
     z-index: 998;
   }
+
+  .m-tooltip--bubble {
+    position: absolute;
+    right: -40px;
+    top: 28px;
+  }
 }
 
 .m-v2-topbar__UserMenu
