--- a/src/app/modules/notifications/toggle.component.html
+++ b/src/app/modules/notifications/toggle.component.html
@@ -1,10 +1,12 @@
 <a
   (click)="toggle($event)"
-  title="Notifications"
   class="m-notifications--topbar-toggle--icon"
   [class.m-notifications--topbar-toggle--icon--active]="service.count > 0"
 >
-  <i class="material-icons">notifications</i>
+  <m-tooltip>
+    <i class="material-icons" m-tooltip--icon>notifications</i>
+    Notifications</m-tooltip
+  >
   <span *ngIf="newNavigation && service.count > 0">{{ service.count }}</span>
 </a>
 
