Tiers warning on new tab #3583

--- a/src/app/modules/channels/v2/shop/memberships/edit.component.html
+++ b/src/app/modules/channels/v2/shop/memberships/edit.component.html
@@ -136,7 +136,7 @@
           >
           <m-tooltip
             ><span m-tooltip--anchor>𝒊</span>
-            <ng-container
+            <ng-container i18n="@@CHANNELS_SHOP_MEMBERSHIPS_BENEFIT_DESCRIPTION"
               >Add a short description of what your supporters will get for
               joining this tier.</ng-container
             >
@@ -158,9 +158,11 @@
         *ngIf="!(service.canReceiveUsd$ | async)"
       >
         <i class="material-icons">warning</i>
-        <span
+        <span i18n="@@CHANNELS_SHOP_MEMBERSHIPS_CONNECT_YOUR_BANK"
           >Important!
-          <a routerLink="/wallet/canary/cash/settings">Connect your bank A/C</a>
+          <a routerLink="/wallet/canary/cash/settings" target="_blank"
+            >Connect your bank A/C</a
+          >
           to receive USD payments</span
         >
       </div>
@@ -169,8 +171,8 @@
         *ngIf="!(service.canReceiveTokens$ | async)"
       >
         <i class="material-icons">warning</i>
-        <span
-          ><a routerLink="/wallet/canary/tokens/settings"
+        <span i18n="@@CHANNELS_SHOP_MEMBERSHIPS_ADD_RECEIVER_ADDRESS"
+          ><a routerLink="/wallet/canary/tokens/settings" target="_blank"
             >Add receiver address</a
           >
           to receive tokens payments</span
