Moving composer window up on wider than mobile devices #3244

--- a/src/app/modules/modals/v2/modal-v2.component.scss
+++ b/src/app/modules/modals/v2/modal-v2.component.scss
@@ -23,11 +23,11 @@
   .m-overlay-modal {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     position: static;
     padding: 0;
-    margin: 0 auto;
+    margin: 35px auto;
     transform: none !important;
     overflow: initial;
     width: auto;
@@ -40,6 +40,7 @@
     @media screen and (max-width: $max-mobile) {
       position: absolute;
       top: 0;
+      margin: 0 auto;
     }
     .m-overlay-modal--close {
       @include m-theme() {
