Channel membership carousel edit buttons fade

--- a/src/app/modules/channels/v2/about/about.component.scss
+++ b/src/app/modules/channels/v2/about/about.component.scss
@@ -41,6 +41,10 @@
       @include m-theme() {
         color: themed($m-textColor--secondary);
       }
+
+      &.m-channelAboutField__label--subs {
+        cursor: pointer;
+      }
     }
 
     .m-channelAboutField__content {
