--- a/src/app/modules/channels/v2/shop/memberships/memberships.component.ng.scss
+++ b/src/app/modules/channels/v2/shop/memberships/memberships.component.ng.scss
@@ -8,7 +8,11 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 0 40px;
+    padding: 20 40px;
+
+    @media screen and (max-width: $max-mobile) {
+      padding: 20 24px;
+    }
   }
 
   .m-channelShopMemberships__title {
@@ -46,7 +50,7 @@
         width: 100%;
         border-radius: 2px;
         text-align: center;
-        margin: 30px 0;
+        margin: 10px 0;
 
         @include m-theme() {
           border: 1px dashed themed($m-borderColor--primary);
@@ -75,9 +79,16 @@
     font-size: 16px;
     cursor: pointer;
     margin-left: 20px;
+    transition: color 0.3s cubic-bezier(0.23, 1, 0.32, 1);
 
     @include m-theme() {
-      color: themed($m-textColor--primary);
+      color: themed($m-textColor--secondary);
+    }
+
+    &:hover {
+      @include m-theme() {
+        color: themed($m-textColor--primary);
+      }
     }
 
     &.m-channelShopMemberships__headerAction--small {
@@ -97,6 +108,13 @@
 
       &:last-child {
         margin-right: 0;
+      }
+    }
+  }
+  ::ng-deep {
+    m-carousel {
+      [class*='m-carousel__overflowScrollButton--'] {
+        top: 27%;
       }
     }
   }
