--- a/src/app/modules/translate/translate.html
+++ b/src/app/modules/translate/translate.html
@@ -90,11 +90,7 @@
     *ngIf="translationInProgress && hasNav2020"
   >
     <div class="m-translationLabel__content">
-      <div class="m-blinkingEllipsis__container">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+      <m-loadingEllipsis></m-loadingEllipsis>
     </div>
   </div>
   <ng-container
