--- a/src/app/modules/newsfeed/feeds/sorted.component.scss
+++ b/src/app/modules/newsfeed/feeds/sorted.component.scss
@@ -123,7 +123,7 @@ m-newsfeed--sorted {
     }
   }
 
-  .m-search-bar-suggestions-list {
+  .m-searchBarSuggestions {
     width: 100%;
     margin-top: 1px;
     border-radius: 6px;
@@ -132,7 +132,7 @@ m-newsfeed--sorted {
       box-shadow: 1px 1px 1px rgba(themed($m-black), 0.26);
     }
 
-    .m-search-bar-suggestions-suggestion {
+    .m-searchBarSuggestions__suggestion {
       padding: 16px 8px;
 
       &:last-child {
