(feat): apply title tags to our search pages so they can be better indexed

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.scss
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.scss
@@ -127,13 +127,13 @@
           padding: 0 20px;
         }
 
-        @media screen and(max-width: $m-grid-max-mobile) {
+        @media screen and(max-width: $layoutMin2ColWidth) {
           // width: 20px;
           transition: width ease-in-out 0.2s;
           padding: 0;
 
           &.is-focused {
-            // width: 270px;
+            width: 270px;
           }
         }
 
