--- a/src/app/modules/layout/topbar-wrapper/topbar.component.html
+++ b/src/app/modules/layout/topbar-wrapper/topbar.component.html
@@ -1,5 +1,5 @@
 <m-v3topbar>
-  <ng-container search *ngIf="session.isLoggedIn()">
+  <ng-container search>
     <m-search--bar [defaultSizes]="false"></m-search--bar>
   </ng-container>
 
