--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -50,11 +50,11 @@
       class="m-pageLayout__pane--main"
       style="display:flex; flex-direction: row;"
     >
-      <div class="m-v3Topbar__middleColumn" *ngIf="!isMobile">
+      <div class="m-v3Topbar__middleColumn">
         <ng-container *ngTemplateOutlet="searchBar"></ng-container>
       </div>
 
-      <div class="m-v3Topbar__spacer" *ngIf="!isMobile"></div>
+      <div class="m-v3Topbar__spacer"></div>
 
       <div class="m-v3Topbar__rightColumn">
         <ng-container *ngIf="!onAuthPages && !getCurrentUser()">
@@ -78,12 +78,9 @@
             </a>
           </div>
         </ng-container>
-        <ng-container *ngIf="isMobile">
-          <ng-container *ngTemplateOutlet="searchBar"></ng-container>
-        </ng-container>
 
         <div class="m-v3Topbar__userMenu" *ngIf="getCurrentUser()">
-          <div class="m-v3Topbar__spacer" *ngIf="!isMobile"></div>
+          <div class="m-v3Topbar__spacer"></div>
           <!-- edit -->
           <ng-content select="[icons]"></ng-content>
           <m-usermenu__v3
