Changes for browser push notifs

--- a/src/app/modules/settings-v2/account/toaster-notifications/toaster-notifications.component.html
+++ b/src/app/modules/settings-v2/account/toaster-notifications/toaster-notifications.component.html
@@ -38,6 +38,9 @@
       </div>
     </div>
   </div>
+  <button class="button button-primary" (click)="subscribeToNotifications()">
+    Subscribe
+  </button>
   <div class="m-form__buttonsContainer">
     <m-shadowboxSubmitButton
       [disabled]="!canSubmit()"
