--- a/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
+++ b/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
@@ -9,7 +9,7 @@
     <div class="m-layout--spacer"></div>
     <ul class="m-boost-rotator-tabs">
       <li
-        routerLink="/newsfeed/boost"
+        routerLink="/discovery/boost/feed"
         *ngIf="router.url !== '/newsfeed/boost'"
         class="m-boostRotator__tab--boost-feed"
       >
