--- a/src/app/modules/discovery/trends/trends.component.html
+++ b/src/app/modules/discovery/trends/trends.component.html
@@ -1,26 +1,4 @@
-<div class="m-tabs__container">
-  <div class="m-tabs__tab">
-    <a
-      routerLink="./"
-      routerLinkActive="m-tabs__tab--selected"
-      data-cy="discovery-tab-link-overview"
-      i18n="@@DISCOVERY__TRENDS__JUST_FOR_YOU"
-      >Just for you</a
-    >
-  </div>
-  <div class="m-tabs__tab">
-    <a
-      routerLink="../tags"
-      routerLinkActive="m-tabs__tab--selected"
-      data-cy="discovery-tab-link-tags"
-      i18n="@@DISCOVERY_TAGS__DISCOVERY_BY_TAGS"
-      >Discover by tags</a
-    >
-  </div>
-  <div class="m-layout__spacer"></div>
-  <m-discovery__settingsButton modalType="tags"></m-discovery__settingsButton>
-</div>
-
+<m-discovery__tabs></m-discovery__tabs>
 <m-loadingSpinner [inProgress]="inProgress$ | async"> </m-loadingSpinner>
 
 <m-discovery__noTagsPrompt
