make topbar bulb always clickable

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.scss
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.scss
@@ -44,7 +44,7 @@
   border: none;
   height: 75px;
   width: 100%;
-  z-index: 9999;
+  z-index: 1000000;
   transform: translateZ(0);
 
   .m-v3TopbarTop__inner {
